--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_learning"
+        android:name=".AndroidLearningApp"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
